--- a/pyproject.toml
+++ b/pyproject.toml
@@ -9,6 +9,10 @@ python = ">=3.10.0,<3.11"
 pillow = "^10.0.0"
 telegram = "^0.0.1"
 python-telegram-bot = "20.4"
+pytelegrambotapi = "^4.26.0"
+python-dotenv = "^1.1.0"
+aiogram = "^3.19.0"
+data = "^0.4"
 
 [tool.pyright]
 # https://github.com/microsoft/pyright/blob/main/docs/configuration.md
